--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     </div>
     <div class="video col-12 col-md-6">
-        <video   class="file"   controls autoplay loop muted><source src="Media/rock.mp4" type="video/mp4"/></video>
+        <video   class="file"  autoplay loop muted><source src="Media/rock.mp4" type="video/mp4"/></video>
     </div>
 
 </div>
